Twenty Fourteen: avoid a potential gap in `menu-toggle` content. Props kwight, fixes #26383. Built from https://develop.svn.wordpress.org/trunk@26600
git-svn-id: http://core.svn.wordpress.org/trunk@26490 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -986,6 +986,7 @@ span + .edit-link:before,
 	cursor: pointer;
 	height: 48px;
 	margin: 0;
+	overflow: hidden;
 	position: absolute;
 	top: 0;
 	right: 0;
